# main.go
@@ -5,12 +5,22 @@ import (
 	"rofl-bot/config"
 	"rofl-bot/controller"
 	_ "rofl-bot/docs"
+	"rofl-bot/repository"
 	"rofl-bot/router"
 	"rofl-bot/service"
 
 	swaggerFiles "github.com/swaggo/files"
 	ginSwagger "github.com/swaggo/gin-swagger"
 )
+
+// @title Rofl Bot API
+// @version 1.0
+// @description API для tg Mini App "Приколы у Алёны"
+
+// @securityDefinitions.apikey BearerAuth
+// @in header
+// @name Authorization
+// @description Введите "Bearer {access_token}" (без кавычек)
 
 func main() {
 	log.Println("Starting alena rofls ...")
@@ -23,10 +33,11 @@ func main() {
 	config.InitDB(cfg)
 	_ = config.DB
 
-	authService := service.NewAuthService(cfg)
+	authRep := repository.NewAuthRep(config.DB)
+	authService := service.NewAuthService(cfg, authRep)
 	authCtrl := controller.NewAuthCtrl(authService)
 
-	r := router.SetupRouter(authCtrl)
+	r := router.SetupRouter(cfg, authCtrl)
 	r.GET("/swagger/*any", ginSwagger.WrapHandler(swaggerFiles.Handler))
 	r.Run(":8000")
 }
